--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,16 @@
 	padding-bottom: 10px;
 }
 
+p {
+	font-size: 16px;
+	text-align: justify;
+}
+
+
 /*  End services classes  */
 
 /*  Base style  */
 body {
-	background: url(../img/bg-img.png);
 	font-family: 'Roboto', Arial, sans-serif;
 }
 /*  End Base style  */
@@ -59,7 +64,6 @@ header {
 
 header .logo{
 	line-height: 132px;
-	margin-left: 10px;
 }
 
 .social-btn img {
@@ -69,6 +73,10 @@ header .logo{
 .phone, 
 .mail {
 	font-size: 24px;
+}
+
+.phone .fa,
+.mail .fa {
 	color: #F5598B;
 }
 
@@ -78,7 +86,7 @@ header .logo{
 }
 /*  End Section header  */
 #header {
-	background: rgba(255, 255, 255, 0.8);
+	background: rgba(255, 255, 255, 1);
 	padding: 5px 10px;
 }
 
@@ -103,20 +111,79 @@ nav, main {
 	width: 164px;
 }
 
+.nav > li:last-child {
+	width: 186px;
+}
 
 .nav li a{
 	text-align: center;
-	color: #F5598B;
+	background: #f03fa2;
+	color: #fff;
 	font-size: 20px;
 	font-weight: 700;
 }
+
+.nav > li > a:hover {
+	color: #f03fa2;
+}
+
 
 .navbar-nav {
 	margin: 0;
 }
 
 .img-menu img{
-	width: 340px;
+	width: 361px;
 }
 /*  End Navigation section  */
 
+.brends {
+	text-align: center;
+	margin-top: 10px;
+}
+
+.brends img {
+	width: 92px;
+}
+
+.benefits {
+	margin-top: 20px;
+}
+
+.benefits > .col-xs-3 > img {
+	width: 210px;
+}
+
+.benefits h2 {
+	margin-top: 0;
+	margin-left: -20px;
+}
+
+.benefits li {
+	color: #f03fa2;
+	font-size: 21px;
+}
+
+.benefits li > span {
+	color: #000;
+	font-size: 21px;
+}
+
+/*  Footer style  */
+
+footer {
+	background-color: #70476B;
+	color: #fff;
+	padding-top: 20px;
+	height: 100px;
+}
+
+footer .social-btn {
+	float: right;
+}
+
+footer .social-btn img {
+	width: 48px
+}
+
+/*  End Footer style*/
