--- a/css/style.css
+++ b/css/style.css
@@ -132,14 +132,30 @@ nav, main {
 	margin: 0;
 }
 
+.img-menu {
+  margin-top: 20px;
+  text-align: center;
+}
+
 .img-menu img{
-	width: 361px;
+	width: 314px;
+  border-radius: 50%;
+}
+
+.img-menu a:hover img {
+  box-shadow: 0px 10px 20px #70476B;
+}
+
+.img-menu h3 {
+  text-align: center;
+  color: #70476B;
+  font-weight: 700;
 }
 /*  End Navigation section  */
 
 .brends {
 	text-align: center;
-	margin-top: 10px;
+	margin: 30px 0;
 }
 
 .brends img {
